[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
[project]
name = "urirun-inquiry"
version = "0.1.0"
description = "Investigation by URI graph, not log debugging: every claim a URI-proof, every repair a URI-plan, every inquiry emits a next-step ticket so koru never idles."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Tom Sapletta" }]
dependencies = []
[project.scripts]
urirun-inquiry = "urirun_inquiry.cli:main"
[tool.setuptools.packages.find]
include = ["urirun_inquiry*"]
